--- a/Home_Page/styles.css
+++ b/Home_Page/styles.css
@@ -49,7 +49,7 @@ h1 {
 header {
     max-width: 600px;
     margin: auto;
-    height: 200px;
+    height: 190px;
 
 }
 
@@ -130,7 +130,6 @@ header h1 {
    text-decoration: none;
    color:black;
 
-
 }
 
 #contact-accent
@@ -158,5 +157,47 @@ footer {
     #contact-accent
     {
         width:100%;
+    }
+}
+
+@media(max-width: 500px) {
+
+    #transbox{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    #Welcome {
+       height: 25em;
+    }
+
+    #Welcome h2 br {
+        display: none;
+    }
+
+    #Welcome h2 {
+        font-size: 40px;
+        margin-top: 100px;
+    }
+
+    #Welcome h3 {
+        font-size: 30px;
+        margin: 0;
+    }
+
+    #Contact {
+        padding: 0;
+        margin: 0
+    }
+
+    #Contact h2  {
+        text-align: center;
+        margin: 0
+    }
+
+    #contact-text {
+        text-align: center;
+
     }
 }
