--- a/Home_Page/styles.css
+++ b/Home_Page/styles.css
@@ -60,7 +60,7 @@ header h1 {
 }
 
 #Welcome {
-    background-image:url("/Scroll.JPG");
+    background-image:url("/Users/koconnor/String_Trax/Home_Page/Scroll.JPG");
     background-position: center;
     background-size: cover;
     max-width: 100%;
