--- a/Contact_page/contact.css
+++ b/Contact_page/contact.css
@@ -5,4 +5,92 @@ object-fit: cover;
 display: block;
 width: 100%;
 height: 80vh;
+
+}
+
+#Contact-form {
+    height: 980px;
+    background-color: rgb(247, 247, 247);
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    padding-top: 120px;
+}
+
+h2 {
+    margin: 0;
+    color: rgb(179,138,76);
+    font-size: 80px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+p {
+    font-size: 22px;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+label {
+    display: block;
+}
+
+input[type="text"] {
+    width:800px;
+    padding: 15px 20px;
+}
+
+textarea {
+    width: 800px;
+    height: 150px;
+    resize: none;
+    font-family:'Open Sans', sans-serif;
+    padding: 15px 20px;
+    
+}
+
+button {
+   background-color: gray; 
+   color: white;
+   border: none;
+   padding: 15px 30px;
+   
+   
+}
+
+::placeholder {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+}
+
+@media(max-width: 690px) {
+img {
+    height: 40vh;
+}
+
+#Contact-form {
+    padding: 20px;
+}
+
+#Contact-form h2 {
+    font-size: 50px;
+    margin-top: 40px;
+}
+ input[type='text'] {
+    
+    width: 300px;
+}
+
+textarea {
+   
+    width: 300px; 
+}
+ 
+
 }
