--- a/main.css
+++ b/main.css
@@ -50,12 +50,23 @@ header h1 {
     text-align: center;
 }
 
+header h1 a {
+  text-decoration: none;
+    color: black !important;
+}
+
 /* footer (all pages)*/
 footer {
     text-align: center;
     padding: 50px;
     font-size:x-large
 }
+
+footer a {
+  text-decoration: none;
+  color: black !important;
+}
+
 
 
 /*animation*/
@@ -175,4 +186,4 @@ header h1 {
         transform: rotate(-45deg);
       }
       
-}
+    }
