--- a/Media_Page/media.css
+++ b/Media_Page/media.css
@@ -190,47 +190,53 @@ input[type="range"]:active::-ms-thumb {
     background: black;
 }
 
-.video-gallery-container {
-    width: 1200px;
+/* .video-gallery-container {
+    width: 100%;
     margin: 0 auto;
     margin-top: 100px;
-}
+    
+} */
 
 .video-gallery-container,
 .video-gallery-container * {
     box-sizing: border-box;
 }
 
-.video-gallery-container .video-gallery {
+.video-gallery-container{
     display: flex;
+    flex-direction: column;
     background: rgb(247, 247, 247);
     padding: 16px;
     padding-top: 24px;
     gap: 24px;
     color: black;
     justify-content: center;
+    max-width: 960px;
+    margin: 0 auto;
+    margin-top: 100px;
 }
 
-.video-gallery h3.video-title {
+h3.video-title {
     line-height: 1.6;
     font-size: 25px;
-
+    margin-top: -15px;
+   
 }
 
-.video-gallery .thumbnail {
+.video-gallery-container .thumbnail {
     height: 160px;
     cursor: pointer;
 }
 
-.video-gallery .video {
+.video-gallery-container .video {
     position: relative;
 }
 
-.video-gallery .video:hover .play-button {
+.video-gallery-container .video:hover .play-button {
     opacity: 1;
 
 }
-.video-gallery .play-button {
+.video-gallery-container .play-button {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -240,17 +246,44 @@ input[type="range"]:active::-ms-thumb {
     transition: opacity 400ms ease;
 }
 
-.video-gallery .video .play-button img {
+.video-gallery-container .video .play-button img {
     height: 50px;
     width: 50px;
 }
 
-.video-gallery .all-videos {
-    display: flex;
+.video-gallery-container .all-videos {
+    display: none;
     flex-direction: column;
     gap: 8px;
+    
 }
 
 .video p {
     margin: 0 0 5px 0;
+}
+
+#thumbs {
+    display:flex; 
+    flex-wrap:nowrap;
+    overflow: scroll visible;
+    width: 100%;
+    gap: 10px;
+}
+
+iframe {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    
+}
+
+#frame-holder {
+    position: relative;
+    padding-bottom: 60%;
+    width: 100%;
+}
+
+#video {
+    background-color: rgb(247, 247, 247);
 }
