--- a/Media_Page/media.css
+++ b/Media_Page/media.css
@@ -21,16 +21,18 @@
     margin: 100px 2.5% auto 2.5%;
     background: #fff;
     display: grid;
-    grid-template-columns: 170px 85px 420px 175px;
+    grid-template-columns: 170px 85px auto 120px;
     grid-template-areas: 
     "img icon text links"
     "img current-time slider duration";
     gap: 20px;
+    width: 100%;
+    max-width: 800px;
 }
 
 .play-icon {
     border: 1px solid black;
-    border-radius: 100px;
+    border-radius: 50%;
     padding: 15px;
     grid-area: icon;
     background: transparent;
@@ -109,7 +111,7 @@ input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 3px;
     cursor: pointer;
-    background: linear-gradient(to right, rgb(175, 172, 172) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+    background: linear-gradient(to right, rgb(175, 172, 172) var(--buffered-width), rgb(175, 172, 172) var(--buffered-width));
 }
 input[type="range"]::before {
     position: absolute;
@@ -141,7 +143,7 @@ input[type="range"]::-moz-range-track {
     width: 100%;
     height: 3px;
     cursor: pointer;
-    background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+    background: linear-gradient(to right, rgb(175, 172, 172) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
 }
 input[type="range"]::-moz-range-progress {
     background-color: .007db5;
@@ -189,13 +191,6 @@ input[type="range"]:active::-ms-thumb {
     transform: scale(1.2);
     background: black;
 }
-
-/* .video-gallery-container {
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 100px;
-    
-} */
 
 .video-gallery-container,
 .video-gallery-container * {
@@ -287,3 +282,63 @@ iframe {
 #video {
     background-color: rgb(247, 247, 247);
 }
+
+@media(max-width: 720px) {
+
+    .video-gallery-container .thumbnail {
+        height: 90px;
+    }
+
+    .video-gallery-container .play-button {
+        top: 35%;
+    }
+}
+
+@media(max-width: 600px) {
+    .audio-player-container {
+        grid-template-columns: auto;
+        grid-template-rows: 3fr 1fr 1fr 1fr fr 1fr;
+        grid-template-areas: 
+        "img img"
+        "slider slider"
+        "current-time duration"
+        "icon icon"
+        "text text"
+        "links links";
+        justify-content: center;
+        gap: 0;
+        
+        
+    }
+    .albumCover {
+        grid-area: img;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .current-time {
+        margin-top: 0px;
+        text-align: left;
+    }
+
+    .duration {
+        margin-top: 0px;
+        text-align: right;
+    }
+
+    .play-icon {
+        justify-self: center;
+        margin-top: 0;
+    }
+
+    #text {
+        text-align: center;
+    }
+
+    #links {
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
