--- a/css/home.scss
+++ b/css/home.scss
@@ -1,15 +1,34 @@
-@import "../main.css";
-/* Homepage elements*/
-/*design*/
-
+---
+---
 #Welcome {
-    background-image:url("/Scroll.jpg");
+    background-image:url("/img/Scroll.jpg");
     background-position: center;
     background-size: cover;
     max-width: 100%;
     height: 700px;
     display: flex;
     justify-content: end;
+
+    h2 {
+        padding-top: 30px;
+        font-size: 75px;
+        line-height: 1.2em;
+        position: relative;
+        color:rgb(52, 52, 52);
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+     
+     }
+     
+     h3 {
+         margin-top: 0;
+         font-size: 35px;
+         text-align: center;
+         color:rgb(52, 52, 52)
+     }
+     
+
 }
 
 #transbox {
@@ -18,25 +37,6 @@
     background-color: rgba(255, 255, 255, 0.371);
     width: 40%;
     
-}
-
-#Welcome h2 {
-   padding-top: 30px;
-   font-size: 75px;
-   line-height: 1.2em;
-   position: relative;
-   color:rgb(52, 52, 52);
-   text-align: center;
-   text-transform: uppercase;
-   margin-bottom: 20px;
-
-}
-
-#Welcome h3 {
-    margin-top: 0;
-    font-size: 35px;
-    text-align: center;
-    color:rgb(52, 52, 52)
 }
 
 #Contact {
