media data, baseurl, fonts

--- a/css/home.scss
+++ b/css/home.scss
@@ -1,7 +1,7 @@
 ---
 ---
 #Welcome {
-    background-image:url("/img/Scroll.jpg");
+    background-image:url("{{site.baseurl}}/img/Scroll.jpg");
     background-position: center;
     background-size: cover;
     max-width: 100%;
