--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{page.title}}</title>
-    <script src="/js/script.js" defer> </script>
-    <link rel="stylesheet" href="/css/main.css">
-    {% if page.sheet %}<link rel="stylesheet" href="{{page.sheet}}">{% endif %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <script src="{{site.baseurl}}/js/script.js" defer> </script>
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+    {% if page.sheet %}<link rel="stylesheet" href="{{site.baseurl}}{{page.sheet}}">{% endif %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -21,7 +18,7 @@
 <body>
     <header>
         <div id="head-nav">
-            <h1><a href="/">Stringtrax.com</a></h1>
+            <h1><a href="{{site.baseurl}}/">Stringtrax.com</a></h1>
             <div class="mobile-nav">
             <input class="checkbox" type="checkbox" name="" id="" />
             <div class="hamburger-lines">
@@ -31,10 +28,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/media.html">Media</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="{{site.baseurl}}/">Home</a></li>
+                    <li><a href="{{site.baseurl}}/media">Media</a></li>
+                    <li><a href="{{site.baseurl}}/about">About</a></li>
+                    <li><a href="{{site.baseurl}}/contact">Contact</a></li>
                 </ul>
             </nav>
             </div>
