--- a/css/about.scss
+++ b/css/about.scss
@@ -2,7 +2,7 @@
 ---
 #about-info {
   
-    background-image:url("/concertbg.jpeg");
+    background-image:url("{{site.baseurl}}/img/concertbg.jpeg");
     background-position: 15% 35%;
     background-size: cover;
     max-width: 100%;
