--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div id="head-nav">
-                <h1><a href="{{site.baseurl}}/">Stringtrax.com</a></h1>
+                <h1><a href="{{site.baseurl}}/">Stringtrax</a></h1>
                 <div class="mobile-nav">
                     <input class="checkbox" type="checkbox" name="" id="" />
                     <div class="hamburger-lines">
