--- a/css/main.scss
+++ b/css/main.scss
@@ -39,6 +39,24 @@ nav
 }
 
 
+.button-ish
+{
+  display: inline-block;
+  padding: 10px 20px;
+  border: 2px solid #343434;
+  color: #343434;
+  font-family: Open Sans, sans-serif;
+  font-weight:900;
+  text-transform: uppercase; 
+  text-decoration: none;
+  letter-spacing: 2px;
+  transition: all 0.4s;
+}
+.button-ish:hover
+{
+  background: #343434;
+  color: #efefef;
+}
 
 
 .mobile-nav ul {
