--- a/css/main.scss
+++ b/css/main.scss
@@ -43,8 +43,8 @@ nav
 {
   display: inline-block;
   padding: 10px 20px;
-  border: 2px solid #343434;
-  color: #343434;
+  border: 2px solid #4c3c32;
+  color: #4c3c32;
   font-family: Open Sans, sans-serif;
   font-weight:900;
   text-transform: uppercase; 
@@ -54,7 +54,7 @@ nav
 }
 .button-ish:hover
 {
-  background: #343434;
+  background: #4c3c32;
   color: #efefef;
 }
 
