updated image link for spotify and font sizing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         </header>
         {{content}}
         <footer>
-            <a href="/">stringtrax.com</a>
+            <a href="{{site.baseurl}}/">stringtrax.com</a>
         </footer>
     </body>
 </html>
