--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Open Sans', Georgia, sans-serif;
-    size: 20px;
+    size: 15px;
     margin: 0;
 }
 h1, h2, h3, h4, h5, h6
@@ -89,7 +89,7 @@ header h1 a {
 footer {
     text-align: center;
     padding: 50px;
-    font-size:x-large
+    font-size:medium;
 }
 
 footer a {
