Changed font sizes

--- a/css/home.scss
+++ b/css/home.scss
@@ -61,7 +61,7 @@
         flex-basis: 45%;
         background-color: rgb(247, 247, 247);
         padding: 20px 100px 20px 100px;
-        font-size: larger;
+        font-size: medium;
         text-decoration: none;
         
         display: flex;
