--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/img/favicon.png">
+        <meta property="og:image" content="{{site.baseurl}}/img/Social.png">
         <title>{{page.title}}</title>
         <script src="{{site.baseurl}}/js/script.js" defer> </script>
         <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
