--- a/css/about.scss
+++ b/css/about.scss
@@ -91,8 +91,8 @@
         font-size: 50px;
     }
 
-    #About p, cite {
-        font-size: 15px;
+    #About p, cite, #testimonials p {
+        font-size: 17px;
     }
 
 }
