--- a/css/about.scss
+++ b/css/about.scss
@@ -64,6 +64,7 @@
     {
         margin: 0 0 60px 0;
         font-family: Open Sans;
+        font-size: 18px;
     }
 
     p
@@ -84,15 +85,21 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-color: black;
+
+        p{ font-size: 16px;}
+
+        h2{ font-size: 50px;}
     }
 
-    #testimonials h2, #about-info h2
+    #testimonials
     {
-        font-size: 50px;
-    }
-
-    #About p, cite, #testimonials p {
-        font-size: 17px;
+        h2
+        {
+            font-size: 50px;
+        }        
+        cite, p {
+            font-size: 16px;
+        }
     }
 
 }
