Tweaks to form and messing with safari iPhone styling (again)

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -108,3 +108,20 @@ form {
     }
 
 }
+
+#thanks
+{
+    display:none;
+}
+body.done
+{
+    form
+    {
+        display:none;
+    }
+    #thanks
+    {
+        display:block;
+        margin-top: 200px;
+    }
+}
