--- a/css/about.scss
+++ b/css/about.scss
@@ -37,9 +37,11 @@
      
      p
      {
-         font-size: 19px;
+         font-size: 18px;
          line-height: 1.6em;
+         /*
          text-shadow: 0px 2px 5px black, 0px 2px 5px black, 0px 2px 3px black, 0px 1px 2px black;
+         */
      }
 
 }
@@ -64,12 +66,12 @@
     {
         margin: 0 0 60px 0;
         font-family: Open Sans;
-        font-size: 18px;
     }
 
     p
     {
         font-size: 18px;
+        line-height: 1.6em;
     }
     
 }
