freaking webkit bs

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 @import url("./fonts.css");
 
 body {
+  -webkit-text-size-adjust: 100%;
     font-family: 'Open Sans', Georgia, sans-serif;
     size: 18px;
     margin: 0;
