--- a/css/media.scss
+++ b/css/media.scss
@@ -192,111 +192,6 @@ input[type="range"]:active::-ms-thumb {
     background: black;
 }
 
-.video-gallery-container,
-.video-gallery-container * {
-    box-sizing: border-box;
-}
-
-.video-gallery-container{
-    display: flex;
-    flex-direction: column;
-    background: rgb(247, 247, 247);
-    padding: 16px;
-    padding-top: 24px;
-    gap: 24px;
-    color: black;
-    justify-content: center;
-    max-width: 960px;
-    margin: 0 auto;
-    margin-top: 100px;
-}
-
-h3.video-title {
-    line-height: 1.6;
-    font-size: 25px;
-    margin-top: -15px;
-   
-}
-
-.video-gallery-container .thumbnail {
-    height: 160px;
-    cursor: pointer;
-}
-
-.video-gallery-container .video {
-    position: relative;
-}
-
-.video-gallery-container .video:hover .play-button {
-    opacity: 1;
-}
-.video-gallery-container .video[data-active='true'] .play-button {
-    opacity: 1;
-}
-
-.video-gallery-container .play-button {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity 400ms ease;
-}
-
-.video-gallery-container .video .play-button img {
-    height: 50px;
-    width: 50px;
-}
-
-.video-gallery-container .all-videos {
-    display: none;
-    flex-direction: column;
-    gap: 8px;
-    
-}
-
-.video p {
-    margin: 0 0 5px 0;
-}
-
-#thumbs {
-    display:flex; 
-    flex-wrap:nowrap;
-    overflow: scroll visible;
-    width: 100%;
-    gap: 10px;
-}
-
-iframe {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    
-}
-
-#frame-holder {
-    position: relative;
-    padding-bottom: 60%;
-    width: 100%;
-}
-
-#video {
-    background-color: rgb(247, 247, 247);
-}
-
-@media(max-width: 720px) {
-
-    .video-gallery-container .thumbnail {
-        height: 90px;
-    }
-
-    .video-gallery-container .play-button {
-        top: 35%;
-    }
-}
-
 @media(max-width: 600px) {
     .audio-player-container {
         grid-template-columns: auto;
@@ -345,16 +240,125 @@ iframe {
         justify-content: space-evenly;
     }
 
-    .video-gallery-container .play-button {
-        top:30%;
-    }
-
-    .video-gallery-container {
-        margin-top: 50px;
-    }
-
     #audio {
         padding: 0 35px;
     }
 }
 
+
+
+#video
+{
+    background-color: rgb(247, 247, 247);
+
+    .video-gallery-container
+    {
+        display: flex;
+        flex-direction: column;
+        background: rgb(247, 247, 247);
+        padding: 16px;
+        padding-top: 24px;
+        gap: 24px;
+        color: black;
+        justify-content: center;
+        max-width: 960px;
+        margin: 0 auto;
+        margin-top: 100px;
+        box-sizing: border-box;
+    
+        @media(max-width:600px)
+        {
+            margin-top: 50px;
+        }
+    
+        & *
+        {
+            box-sizing: border-box;
+        }
+    
+        #frame-holder
+        {
+            position: relative;
+            padding-bottom: 60%;
+            width: 100%;
+    
+            iframe
+            {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+            }
+        }
+    
+        .video-title
+        {
+            line-height: 1.6;
+            font-size: 25px;
+            margin-top: -15px;
+        }
+    
+        #thumbs
+        {
+            display:flex; 
+            flex-wrap:nowrap;
+            overflow: scroll visible;
+            width: 100%;
+            gap: 10px;
+    
+            .video
+            {
+                position: relative;
+    
+                .thumbnail
+                {
+                    height: 160px;
+                    cursor: pointer;
+    
+                    @media(max-width: 720px)
+                    {
+                        height: 90px;
+                    }
+                }
+    
+                .play-button
+                {
+                    position: absolute;
+                    top: 40%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    pointer-events: none;
+                    opacity: 0;
+                    transition: opacity 400ms ease;
+    
+                    img
+                    {
+                        height: 50px;
+                        width: 50px;
+                    }
+                    @media(max-width: 720px)
+                    {
+                        top: 35%;
+                    }
+                    @media(max-width: 600px)
+                    {
+                        top:30%;
+                    }
+                }
+    
+    
+                &:hover .play-button,
+                &[data-active='true'] .play-button 
+                {
+                    opacity: 1;
+                }
+    
+                p
+                {
+                    margin: 0 0 5px 0;
+                }
+    
+            }
+        }
+    }
+}
