--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- config -->
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/img/favicon.png">
-        <meta property="og:image" content="{{site.baseurl}}/img/Social.png">
+        
+        <!-- seo -->
         <title>{{page.title}}</title>
-        <script src="{{site.baseurl}}/js/script.js" defer> </script>
+        <meta property="og:image" content="{{site.baseurl}}{{page.image}}">
+        <meta name="description" content="{{page.description}}">
+        <meta name="keywords" content="{{page.keywords}}">
+        <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
+
+        <!-- assets -->
         <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
         {% if page.sheet %}<link href="{{site.baseurl}}{{page.sheet}}" rel="stylesheet">{% endif %}
+        
     </head>
     <body>
         <header>
@@ -37,5 +44,21 @@
         <footer>
             <a href="{{site.baseurl}}/">stringtrax.com</a>
         </footer>
+        <script>
+            //rough check for desktop devices
+            document.body.setAttribute("data-desktop", (window?.ontouchstart || navigator.maxTouchPoints) ? "false" : "true");
+
+            //intersection observer to animate-in text at certain page points
+            const observerCheckHit = (/**@type {IntersectionObserverEntry}*/element )=>
+            {
+                if (element.isIntersecting)
+                {
+                    requestAnimationFrame( ()=>element.target.setAttribute("data-anim", "on") );
+                }
+            };
+            const observer = new IntersectionObserver( (e)=>e.forEach(observerCheckHit), { root: null, rootMargin: '0px', threshold: 0.1 } );
+            document.querySelectorAll("[data-anim]").forEach(anim=>observer.observe(anim));
+
+        </script>
     </body>
 </html>
